Updated basic user management flow
