# ui/api-yaml/api-docs.yaml
@@ -55,6 +55,18 @@ paths:
       responses:
         "200":
           description: OK
+  /v1/resources/auth-user/me:
+    get:
+      tags:
+        - auth-user-controller
+      operationId: me
+      responses:
+        "200":
+          description: OK
+          content:
+            application/hal+json:
+              schema:
+                $ref: '#/components/schemas/AuthUser'
   /v1/resources/aliases:
     get:
       tags:
@@ -4025,63 +4037,16 @@ components:
           type: string
         password:
           type: string
-    WorkStats:
+    AuthUser:
+      required:
+        - login
       type: object
       properties:
-        from:
-          type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        totalCommits:
+        id:
           type: integer
           format: int64
-        linesAdded:
-          type: integer
-          format: int64
-        linesRemoved:
-          type: integer
-          format: int64
-    DateRange:
-      type: object
-      properties:
-        from:
+        login:
           type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-    RemovedLinesWeeklyStats:
-      type: object
-      properties:
-        from:
-          type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        removedLinesOfOthers:
-          type: integer
-          format: int64
-        removedByOthersLines:
-          type: integer
-          format: int64
-        removedOwnLines:
-          type: integer
-          format: int64
-    OwnershipStats:
-      type: object
-      properties:
-        from:
-          type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        linesOwned:
-          type: integer
-          format: int64
     AbstractJsonSchemaPropertyObject:
       type: object
       properties:
@@ -4151,30 +4116,32 @@ components:
           type: string
         user:
           $ref: '#/components/schemas/User'
-    CollectionModelEntityModelUser:
+    CollectionModelEntityModelRemovedLines:
       type: object
       properties:
         _embedded:
           type: object
           properties:
-            users:
+            removedLineses:
               type: array
               items:
-                $ref: '#/components/schemas/EntityModelUser'
+                $ref: '#/components/schemas/EntityModelRemovedLines'
         _links:
           $ref: '#/components/schemas/Links'
-    EntityModelUser:
+    EntityModelRemovedLines:
       type: object
       properties:
         id:
           type: integer
           format: int64
-        name:
-          type: string
-        aliases:
-          type: array
-          items:
-            $ref: '#/components/schemas/Alias'
+        removedLines:
+          minimum: 0
+          type: integer
+          format: int64
+        fromAuthor:
+          $ref: '#/components/schemas/Alias'
+        weekly:
+          $ref: '#/components/schemas/WeeklyCommitStats'
         _links:
           $ref: '#/components/schemas/Links'
     GitRepo:
@@ -4229,104 +4196,6 @@ components:
           type: string
         lastAnalyzedCommit:
           type: string
-    User:
-      required:
-        - name
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        aliases:
-          type: array
-          items:
-            $ref: '#/components/schemas/Alias'
-    CollectionModelObject:
-      type: object
-      properties:
-        _embedded:
-          type: object
-          properties:
-            objects:
-              type: array
-              items:
-                type: object
-        _links:
-          $ref: '#/components/schemas/Links'
-    CollectionModelEntityModelAlias:
-      type: object
-      properties:
-        _embedded:
-          type: object
-          properties:
-            aliases:
-              type: array
-              items:
-                $ref: '#/components/schemas/EntityModelAlias'
-        _links:
-          $ref: '#/components/schemas/Links'
-    EntityModelAlias:
-      type: object
-      properties:
-        repo:
-          $ref: '#/components/schemas/GitRepo'
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-        user:
-          $ref: '#/components/schemas/User'
-        _links:
-          $ref: '#/components/schemas/Links'
-    CollectionModelEntityModelWeeklyCommitStats:
-      type: object
-      properties:
-        _embedded:
-          type: object
-          properties:
-            weeklyCommitStatses:
-              type: array
-              items:
-                $ref: '#/components/schemas/EntityModelWeeklyCommitStats'
-        _links:
-          $ref: '#/components/schemas/Links'
-    EntityModelWeeklyCommitStats:
-      type: object
-      properties:
-        repo:
-          $ref: '#/components/schemas/GitRepo'
-        alias:
-          $ref: '#/components/schemas/Alias'
-        from:
-          type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        commitCount:
-          minimum: 0
-          type: integer
-          format: int64
-        linesAdded:
-          minimum: 0
-          type: integer
-          format: int64
-        linesRemoved:
-          minimum: 0
-          type: integer
-          format: int64
-        id:
-          type: integer
-          format: int64
-        linesRemovedOf:
-          type: array
-          items:
-            $ref: '#/components/schemas/RemovedLines'
-        _links:
-          $ref: '#/components/schemas/Links'
     RemovedLines:
       required:
         - fromAuthor
@@ -4344,6 +4213,20 @@ components:
           $ref: '#/components/schemas/Alias'
         weekly:
           $ref: '#/components/schemas/WeeklyCommitStats'
+    User:
+      required:
+        - name
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        aliases:
+          type: array
+          items:
+            $ref: '#/components/schemas/Alias'
     WeeklyCommitStats:
       required:
         - alias
@@ -4382,97 +4265,44 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RemovedLines'
-    AuthUser:
-      required:
-        - login
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        login:
-          type: string
-    CollectionModelEntityModelAuthUser:
+    CollectionModelObject:
       type: object
       properties:
         _embedded:
           type: object
           properties:
-            authUsers:
+            objects:
               type: array
               items:
-                $ref: '#/components/schemas/EntityModelAuthUser'
+                type: object
         _links:
           $ref: '#/components/schemas/Links'
-    EntityModelAuthUser:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        login:
-          type: string
-        _links:
-          $ref: '#/components/schemas/Links'
-    CollectionModelEntityModelTotalOwnershipStats:
+    CollectionModelEntityModelAlias:
       type: object
       properties:
         _embedded:
           type: object
           properties:
-            totalOwnershipStatses:
+            aliases:
               type: array
               items:
-                $ref: '#/components/schemas/EntityModelTotalOwnershipStats'
+                $ref: '#/components/schemas/EntityModelAlias'
         _links:
           $ref: '#/components/schemas/Links'
-    EntityModelTotalOwnershipStats:
+    EntityModelAlias:
       type: object
       properties:
         repo:
           $ref: '#/components/schemas/GitRepo'
-        alias:
-          $ref: '#/components/schemas/Alias'
         id:
           type: integer
           format: int64
-        from:
+        name:
           type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        linesOwned:
-          minimum: 0
-          type: integer
-          format: int64
+        user:
+          $ref: '#/components/schemas/User'
         _links:
           $ref: '#/components/schemas/Links'
-    TotalOwnershipStats:
-      required:
-        - alias
-        - from
-        - repo
-        - to
-      type: object
-      properties:
-        repo:
-          $ref: '#/components/schemas/GitRepo'
-        alias:
-          $ref: '#/components/schemas/Alias'
-        id:
-          type: integer
-          format: int64
-        from:
-          type: string
-          format: date-time
-        to:
-          type: string
-          format: date-time
-        linesOwned:
-          minimum: 0
-          type: integer
-          format: int64
     CollectionModelEntityModelGitRepo:
       type: object
       properties:
@@ -4533,6 +4363,28 @@ components:
           type: string
         _links:
           $ref: '#/components/schemas/Links'
+    CollectionModelEntityModelAuthUser:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            authUsers:
+              type: array
+              items:
+                $ref: '#/components/schemas/EntityModelAuthUser'
+        _links:
+          $ref: '#/components/schemas/Links'
+    EntityModelAuthUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        login:
+          type: string
+        _links:
+          $ref: '#/components/schemas/Links'
     CollectionModelEntityModelFileExclusionRule:
       type: object
       properties:
@@ -4575,6 +4427,194 @@ components:
           type: string
         rule:
           type: string
+    CollectionModelEntityModelTotalOwnershipStats:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            totalOwnershipStatses:
+              type: array
+              items:
+                $ref: '#/components/schemas/EntityModelTotalOwnershipStats'
+        _links:
+          $ref: '#/components/schemas/Links'
+    EntityModelTotalOwnershipStats:
+      type: object
+      properties:
+        repo:
+          $ref: '#/components/schemas/GitRepo'
+        alias:
+          $ref: '#/components/schemas/Alias'
+        id:
+          type: integer
+          format: int64
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        linesOwned:
+          minimum: 0
+          type: integer
+          format: int64
+        _links:
+          $ref: '#/components/schemas/Links'
+    TotalOwnershipStats:
+      required:
+        - alias
+        - from
+        - repo
+        - to
+      type: object
+      properties:
+        repo:
+          $ref: '#/components/schemas/GitRepo'
+        alias:
+          $ref: '#/components/schemas/Alias'
+        id:
+          type: integer
+          format: int64
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        linesOwned:
+          minimum: 0
+          type: integer
+          format: int64
+    CollectionModelEntityModelUser:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            users:
+              type: array
+              items:
+                $ref: '#/components/schemas/EntityModelUser'
+        _links:
+          $ref: '#/components/schemas/Links'
+    EntityModelUser:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        aliases:
+          type: array
+          items:
+            $ref: '#/components/schemas/Alias'
+        _links:
+          $ref: '#/components/schemas/Links'
+    CollectionModelEntityModelWeeklyCommitStats:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            weeklyCommitStatses:
+              type: array
+              items:
+                $ref: '#/components/schemas/EntityModelWeeklyCommitStats'
+        _links:
+          $ref: '#/components/schemas/Links'
+    EntityModelWeeklyCommitStats:
+      type: object
+      properties:
+        repo:
+          $ref: '#/components/schemas/GitRepo'
+        alias:
+          $ref: '#/components/schemas/Alias'
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        commitCount:
+          minimum: 0
+          type: integer
+          format: int64
+        linesAdded:
+          minimum: 0
+          type: integer
+          format: int64
+        linesRemoved:
+          minimum: 0
+          type: integer
+          format: int64
+        id:
+          type: integer
+          format: int64
+        linesRemovedOf:
+          type: array
+          items:
+            $ref: '#/components/schemas/RemovedLines'
+        _links:
+          $ref: '#/components/schemas/Links'
+    WorkStats:
+      type: object
+      properties:
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        totalCommits:
+          type: integer
+          format: int64
+        linesAdded:
+          type: integer
+          format: int64
+        linesRemoved:
+          type: integer
+          format: int64
+    DateRange:
+      type: object
+      properties:
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+    OwnershipStats:
+      type: object
+      properties:
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        linesOwned:
+          type: integer
+          format: int64
+    RemovedLinesWeeklyStats:
+      type: object
+      properties:
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
+        removedLinesOfOthers:
+          type: integer
+          format: int64
+        removedByOthersLines:
+          type: integer
+          format: int64
+        removedOwnLines:
+          type: integer
+          format: int64
     CollectionModelEntityModelFileInclusionRule:
       type: object
       properties:
@@ -4617,34 +4657,6 @@ components:
           type: string
         rule:
           type: string
-    CollectionModelEntityModelRemovedLines:
-      type: object
-      properties:
-        _embedded:
-          type: object
-          properties:
-            removedLineses:
-              type: array
-              items:
-                $ref: '#/components/schemas/EntityModelRemovedLines'
-        _links:
-          $ref: '#/components/schemas/Links'
-    EntityModelRemovedLines:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        removedLines:
-          minimum: 0
-          type: integer
-          format: int64
-        fromAuthor:
-          $ref: '#/components/schemas/Alias'
-        weekly:
-          $ref: '#/components/schemas/WeeklyCommitStats'
-        _links:
-          $ref: '#/components/schemas/Links'
     Link:
       type: object
       properties:
